data/derived/comb/progs/unify/prog6457.ml.out
Characters 56-69:
  if n>0 then let x= n mod 10 in digitsOfInt n::x
                                 ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
